refactor: 优化一些编码